color name fixed on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ button {
   }
 
   .color-container .color-name {
-    left: 7.1%;
+    left: calc(0% + 38px);
     bottom: 25%;
   }
 
